[project]
name = "ssbm-world-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "h5py>=3.11",
    "huggingface-hub>=0.24",
    "ipykernel>=7.2.0",
    "melee>=0.45.1",
    "numpy>=2.0",
    "pandas>=2.2",
    "pillow>=10.0",
    "pyarrow>=15.0",
    "tqdm>=4.66",
]
